# rumble-feed-mind

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  ROADMAP.md  db-security-manifest.json  deny.toml  docker-compose.yml  goals.toml  whats-next.md
.cargo/: audit.toml
.claude/: config.json  settings.json
.claude/hooks/: protect-files.py  validate-bash.py
.claude/memory/: CONSTITUTION.md  tech-stack.md
.claude/standards/: api-design.md  code-style-frontend.md  code-style-rust.md
.github/workflows/: contracts.yml  db-inspection.yml  release.yml  rust-ci.yml  security.yml
_bmad/: README.md
_bmad/bmm/: config.yaml
_bmad/bmm/workflows/2-plan-workflows/prd/: prd.md
_bmad/docs/: prd-amendments-v2.1.md  prd.md
apps/web/: package-lock.json  package.json
apps/web-rs/: Cargo.toml  README.md
apps/web-rs/src/: lib.rs
apps/web-rs/src/spike/: mod.rs  models.rs  screens.rs
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/feeds/: page.tsx
apps/web/src/app/(dashboard)/settings/billing/: page.tsx
apps/web/src/app/(dashboard)/settings/billing/invoices/: page.tsx
apps/web/src/app/(dashboard)/settings/billing/payment/: page.tsx
apps/web/src/app/(dashboard)/settings/billing/plans/: page.tsx
apps/web/src/components/: article-card.tsx  article-list.tsx  article-view.tsx  category-filter.tsx  folder-tree.tsx  opml-import.tsx  providers.tsx  rule-editor.tsx  sidebar.tsx  tag-badge.tsx  theme-toggle.tsx  view-mode-toggle.tsx
apps/web/src/hooks/: use-theme.ts
apps/web/src/lib/: api.ts  queries.ts  store.ts
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs  state.rs
crates/api/src/extractors/: auth.rs  mod.rs
crates/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  usage_tracking.rs
crates/api/src/routes/: articles.rs  auth.rs  categories.rs  feeds.rs  folders.rs  health.rs  mod.rs  opml.rs  rules.rs  tags.rs
crates/api/src/routes/billing/: invoices.rs  mod.rs  models.rs  payment_methods.rs  plans.rs  service.rs  subscriptions.rs  usage.rs  webhooks.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  error.rs  lib.rs  storage.rs  sync.rs
crates/core/src/article/: mod.rs  models.rs
crates/core/src/crypto/: encryption.rs  mod.rs
crates/core/src/feed/: fetcher.rs  mod.rs  models.rs  parser.rs
crates/core/src/opml/: exporter.rs  mod.rs  models.rs  parser.rs
crates/core/src/rules/: evaluator.rs  mod.rs  models.rs  regex_rule.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  error.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/article/: mod.rs  models.rs
crates/domain/src/decision/: mod.rs
crates/domain/src/event/: mod.rs
crates/domain/src/feed/: mod.rs  models.rs
crates/domain/src/opml/: mod.rs  models.rs
crates/domain/src/rules/: mod.rs  models.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: error.rs  fetcher.rs  lib.rs  parser.rs
crates/opml/: Cargo.toml
crates/opml/src/: error.rs  exporter.rs  lib.rs  parser.rs
crates/rules/: Cargo.toml
crates/rules/src/: error.rs  evaluator.rs  lib.rs  regex_rule.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: postgres_rls.rs
crates/sync/: Cargo.toml
crates/sync/src/: curated.rs  lib.rs  local.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  main.rs  queue.rs  scheduler.rs
crates/worker/src/handlers/: dunning.rs  mod.rs
crates/worker/src/jobs/: mod.rs
docs/: launch-target.md  logging-classification.md  product-readiness.md  readiness-audit.md  refactor-plan.md  runbook.md  waiver-purge-plan.md
docs/adr/: 0001-rust-core-multiplatform.md  0002-rust-first-product-stack.md  0003-stripe-optional-payment-adapter.md  0004-auth-boundary-jwt-session-biscuit-delegation.md  0005-dependency-advisory-waivers.md  0006-tenant-context-and-row-level-security.md  0007-bounded-public-feed-sync.md
docs/evidence/: live-sync-2026-07-13.md
docs/investigation/: feed-rs-quick-xml.md  scraper-alternatives.md
docs/plans/: 2026-07-feed-mind-cleanup-and-waivers.md  2026-07-first-dioxus-product-slice-v1.md
docs/spikes/: leptos-web-shell.md
e2e/: package-lock.json  package.json  playwright.config.ts  serve.sh
e2e/tests/: curated-review.spec.ts
examples/: demo-article.json  demo-rule.json  demo.opml  expected-curated-export.json
migrations/: 20260127000002_create_folders.sql  20260127000003_create_feeds.sql  20260127000005_create_rules.sql  20260127000007_create_tags.sql  20260127000008_create_sessions.sql  20260127_000001_create_users.sql  20260127_000004_create_articles.sql  20260127_000006_create_rule_evaluations.sql  20260127_000008_create_sessions.sql  20260128000001_create_billing_tables.sql  20260128000002_add_article_categories.sql  20260711000001_enforce_tenant_rls.sql
schemas/: curated-item-export.v0.1.schema.json  local-sync-snapshot.v0.1.schema.json
scripts/: build-feedmind-app.sh  generate-live-radar-proof.sh  verify-design-system.py  verify-feedmind-app.sh
scripts/postgres/: init-dev-principals.sql  provision-roles.sql  transfer-legacy-ownership.sql
surfaces/ui/: Cargo.toml  Dioxus.toml  build.rs  index.html
surfaces/ui/assets/: styles.css
surfaces/ui/assets/libre-ia/: design-system.lock.json  manifest.json  provenance.json
surfaces/ui/src/: lib.rs  main.rs
