[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/ingest",
    "crates/rules",
    "crates/sync",
    "crates/storage",
    "crates/core",
    "crates/api",
    "crates/worker",
    "crates/cli",
    "apps/web-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Constantin Jais"]
repository = "https://github.com/feedmind/feedmind"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RSS/Atom parsing
feed-rs = "2.3"

# HTML parsing
scraper = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9.3"

# Encryption (for API keys)
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Regex
regex = "1.11"

# Cron scheduler
tokio-cron-scheduler = "0.13"

# Stripe payments
stripe = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper"] }

# Internal crates
feedmind-domain = { path = "crates/domain" }
feedmind-ingest = { path = "crates/ingest" }
feedmind-rules = { path = "crates/rules" }
feedmind-sync = { path = "crates/sync" }
feedmind-storage = { path = "crates/storage" }
feedmind-core = { path = "crates/core" }

[profile.release]
lto = true
codegen-units = 1
strip = true
