[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/domain",
    "crates/ingest",
    "crates/opml",
    "crates/rules",
    "crates/sync",
    "crates/storage",
    "crates/core",
    "crates/api",
    "crates/worker",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Constantin Jais"]
repository = "https://github.com/feedmind/feedmind"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "migrate", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RSS/Atom parsing
feed-rs = "2.3"

# HTML parsing
scraper = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Redis
redis = { version = "1.3", features = ["tokio-comp", "connection-manager"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "10.3"

# Encryption (for API keys)
aes-gcm = "0.11"
rand = "0.10"
hkdf = "0.13"
sha2 = "0.11"
digest = "0.11"
base64 = "0.22"

# Regex
regex = "1.11"

# Cron scheduler
tokio-cron-scheduler = "0.13"

# Internal crates
feedmind-crypto = { version = "0.1.0", path = "crates/crypto" }
feedmind-domain = { version = "0.1.0", path = "crates/domain" }
feedmind-ingest = { version = "0.1.0", path = "crates/ingest" }
feedmind-opml = { version = "0.1.0", path = "crates/opml" }
feedmind-rules = { version = "0.1.0", path = "crates/rules" }
feedmind-sync = { version = "0.1.0", path = "crates/sync" }
feedmind-storage = { version = "0.1.0", path = "crates/storage" }
feedmind-core = { version = "0.1.0", path = "crates/core" }

[profile.release]
lto = true
codegen-units = 1
strip = true
