[package]
name = "feedmind-web-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
feedmind-domain = { workspace = true }
leptos = { version = "0.7", default-features = false, features = ["ssr"] }

# uuid (pulled in transitively via feedmind-domain) needs a randomness source
# on wasm32. Enable it only for the wasm target so native/server builds keep
# the default backend and do not link the wasm-bindgen js source.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
