[package]
name = "feedmind-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "feedmind-api"
path = "src/main.rs"

[dependencies]
# Internal
feedmind-crypto = { workspace = true }
feedmind-domain = { workspace = true }
feedmind-ingest = { workspace = true }
feedmind-opml = { workspace = true }

# Async
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation
validator = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

# Utils
base64 = { workspace = true }
regex = { workspace = true }

# HTTP client (for feed discovery)
reqwest = { workspace = true }

# Stripe payments
stripe = { workspace = true }
