[package]
name = "feedmind-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "FeedMind CLI tools for import/export and management"

[[bin]]
name = "feedmind-cli"
path = "src/main.rs"

[dependencies]
feedmind-domain = { workspace = true }
feedmind-ingest = { workspace = true }
feedmind-opml = { workspace = true }
feedmind-rules = { workspace = true }
feedmind-storage = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "migrate", "postgres", "uuid", "chrono"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Password hashing
argon2 = "0.5"
