[package]
name = "feedmind-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
feedmind-domain = { workspace = true }
feedmind-ingest = { workspace = true }
feedmind-rules = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# RSS/Atom parsing
feed-rs = { workspace = true }

# HTML parsing
scraper = { workspace = true }

# XML parsing (for OPML)
quick-xml = "0.37"

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation
validator = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Regex
regex = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
rand = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
