[package]
name = "feedmind-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
feedmind-domain = { workspace = true }
feedmind-sync = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
