[package]
name = "feedmind-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "feedmind-worker"
path = "src/main.rs"

[dependencies]
# Internal
feedmind-core = { workspace = true }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Cron scheduler
tokio-cron-scheduler = { workspace = true }
