[package]
name = "feedmind-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
web = [
    "dioxus/launch",
    "dioxus/asset",
    "dioxus/cli-config",
    "dioxus/warnings",
    "dioxus/web",
    "dep:web-sys",
]

[[bin]]
name = "feedmind-app"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true }
feedmind-sync = { workspace = true }
serde_json = { workspace = true }
web-sys = { version = "0.3", features = ["Location", "Window"], optional = true }

[build-dependencies]
feedmind-sync = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
dioxus-ssr = { workspace = true }
